Fixed overlap between three buttons and about text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -409,7 +409,7 @@ body {
 .settings-padding {
   display: none;
   position: fixed;
-  bottom: 180px;
+  bottom: 170px;
   right: 20px;
   padding: 10px;
   background-color: #00000027;
@@ -520,27 +520,40 @@ body {
   font-family: "Source Code Pro", monospace;
   font-size: 0.9rem;
   color: rgba(255, 255, 255, 0.719);
-  background-color: #22222223;
-  backdrop-filter: blur(1px);
+  /* background-color: #22222223; */
+  /* backdrop-filter: blur(1px); */
   margin-top: 60px;
-  padding: 18px;
+  padding: 12px;
   line-height: 1;
   border-radius: 16px;
   border: 1px solid #ffffff1a;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1); */
   animation: slideUp2 3s cubic-bezier(0.25, 1.25, 0.5, 1);
 }
 
 .about-page a {
+  font-family: "Source Code Pro", monospace;
+  font-size: 0.8rem;
   color: rgba(255, 255, 255, 0.747);
-  text-decoration: underline;
+  border: 1px solid #ffffff1a;
+  padding: 12px;
+  text-decoration: none;
   margin-top: 20px;
-  border-radius: 9px;
+  border-radius: 16px;
   line-height: 1;
+  animation: slideUp2 4s cubic-bezier(0.25, 1.25, 0.5, 1);
 }
 
 .about-page a:hover {
   color: rgba(255, 255, 255, 0.925);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
+  background-color: #22222223;
+  transition: background-color 0.5s ease;
+}
+
+.about-page a:active {
+  background-color: #2222221d;
+  box-shadow: none;
 }
 
 /* Code for about page overlay ends here*/
@@ -552,7 +565,7 @@ body {
 .screensaver{
   display: none;
   position: fixed;
-  bottom: 100px;
+  bottom: 95px;
   right: 20px;
   height: 62px; /*  IDK, This is important to make the button not look oval shaped, Don't remove or alter this Height property */
   padding: 10px;
